fix layout bug

--- a/main.css
+++ b/main.css
@@ -55,7 +55,7 @@ body {
 .detail {
   width: 1100px;
   height: 3000px;
-  margin: 0 127px 0 127px;
+  margin: 0 auto 0 auto;
   background-color: white;
 }
 .what-i-do {
